@@ -20,6 +20,7 @@ importFrom("stats"
          , dhyper, phyper
          , dt, pt, qt
          , dpois, ppois, qpois
+         , uniroot
 )
 
 importFrom("graphics",
@@ -186,7 +187,9 @@ export(
   , pnormAsymp
   , qnormAppr, qnormUappr
   , qnormR, qnormR1
+  , qntR, qntR1
   , qtAppr
+  , qtU, qtU1
   , r_pois, r_pois_expr
     ## no! titleR.exp (FIXME eventually: should not need such a global)
 )
